--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,7 @@ jobs:
           mkdir -p deploy/backend
           cp -r frontend/dist deploy/frontend/
           cp backend/server.js deploy/backend/
+          cp backend/data.json deploy/backend/
 
       - name: Stop PM2 server before deployment
         uses: appleboy/ssh-action@v0.1.10
@@ -78,6 +79,17 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY_DEVHIBOU }}
           port: 22
           source: "deploy/backend/server.js"
+          target: "/var/www/mf2/backend/"
+          strip_components: 2
+
+      - name: Deploy data.json (backend only)
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.VPS_HOST_DEVHIBOU }}
+          username: ${{ secrets.VPS_USER_DEVHIBOU }}
+          key: ${{ secrets.VPS_SSH_KEY_DEVHIBOU }}
+          port: 22
+          source: "deploy/backend/data.json"
           target: "/var/www/mf2/backend/"
           strip_components: 2
 
