--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "mariadb": "^3.4.4",
+    "mysql2": "^3.14.2",
     "ws": "^8.18.3"
   }
 }
