--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,6 +90,7 @@ jobs:
           port: 22
           source: "deploy/backend/games"
           target: "/var/www/mf2/backend/games"
+          strip_components: 3
 
       - name: Restart PM2 server after deployment
         uses: appleboy/ssh-action@v0.1.10
